@startuml  Smart Home API
title Smart Home API — Диаграмма классов

enum SensorType {
    temperature
}

class TemperatureResponse {
    +Value: float64
    +Unit: string
    +Timestamp: time.Time
    +Location: string
    +Status: string
    +SensorID: string
    +SensorType: string
    +Description: string
}

class TemperatureService {
    +BaseURL: string
    +HTTPClient: *http.Client
    +GetTemperature(location: string): *TemperatureResponse
    +GetTemperatureByID(sensorID: string): *TemperatureResponse
}

class Sensor {
    +ID: int
    +RoomID: *int
    +Name: string
    +Type: SensorType
    +Manufacturer: string
    +Model: string
    +SerialNumber: string
    +FirmwareVersion: string
    +Status: string
    +CreatedAt: time.Time
    +UpdatedAt: time.Time
}

class SensorCreate {
    +RoomID: *int
    +Name: string
    +Type: SensorType
    +Manufacturer: string
    +Model: string
    +SerialNumber: string
    +FirmwareVersion: string
}

class SensorUpdate {
    +Name: string
    +Type: SensorType
    +Manufacturer: string
    +Model: string
    +SerialNumber: string
    +FirmwareVersion: string
    +Status: string
}

class SensorHandler {
    +DB: *db.DB
    +TemperatureService: *TemperatureService
    +RegisterRoutes(router: *gin.RouterGroup)
    +GetSensors()
    +GetSensorByID(id: int)
    +CreateSensor(data: SensorCreate)
    +UpdateSensor(id: int, data: SensorUpdate)
    +DeleteSensor(id: int)
    +UpdateSensorValue(id: int, value: float64, status: string)
    +GetTemperatureByLocation(location: string)
}

TemperatureService --> TemperatureResponse : возвращает
SensorHandler --> TemperatureService : использует
SensorHandler ..> SensorCreate : разбирает из JSON
SensorHandler ..> SensorUpdate : разбирает из JSON

@enduml
